<resources>
    <string name="app_name">Football Stats</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete_player">Delete Player</string>
    <string name="dialog_delete_player_title">Delete Player</string>
    <string name="dialog_delete_player_message">"Are you sure you want to delete the player: "</string>
    <string name="dialog_delete_ok">"Delete"</string>
    <string name="dialog_game_title">"Game options"</string>
    <string name="dialog_game_message">"Do you want to edit/delete this game?"</string>
    <string name="dialog_game_delete">"Delete"</string>
    <string name="dialog_game_edit">"Edit"</string>
    <string name="dialog_restore_database_title">"Restore Database"</string>
    <string name="dialog_restore_database_message">"This will permanently overwrite current database. Are you sure you want to proceed?"</string>
    <string name="dialog_restore_database_ok">"Restore"</string>
    <string name="dialog_cancel">"Cancel"</string>
    <string name="main_add_player_button">Add</string>
    <string name="main_add_player_exists">already exists!</string>
    <string name="main_add_player_empty">Enter name!</string>
    <string name="main_show_stats">"Show statistics"</string>
    <string name="player_stats_add_game_button">Add Game</string>
    <string name="player_stats_title_activity">Stats</string>
    <string name="add_game_title_activity">Add game</string>
    <string name="add_game_radio_won">Won</string>
    <string name="add_game_radio_drawn">Drawn</string>
    <string name="add_game_radio_lost">Lost</string>
    <string name="add_game_result">You</string>
    <string name="add_game_result_error">Select game result!</string>
    <string name="add_game_result_2">Won</string>
    <string name="add_game_result_1">Drawn</string>
    <string name="add_game_result_0">Lost</string>
    <string name="add_game_note">Note</string>
    <string name="add_game_elo">ELO</string>
    <string name="add_game_elo_error_empty">Fill opponent\'s ELO!</string>
    <string name="add_game_elo_error_not_number">ELO has to be a number!</string>
    <string name="add_game_submit_button">Submit game</string>
    <string name="game_list_date_error">"date err"</string>
    <string name="game_list_item_opponent">Opponent</string>
    <string name="game_list_item_date">Date</string>
    <string name="game_list_item_elo">"ELO: "</string>
    <string name="game_list_item_result">"You: "</string>
    <string name="game_list_item_note">"Note: "</string>
    <string name="game_list_item_result_won">Won</string>
    <string name="game_list_item_result_drawn">Drawn</string>
    <string name="game_list_item_result_lost">Lost</string>
    <string name="show_stats_title">"Overall statistics"</string>
    <string name="show_stats_total_games">"Games: "</string>
    <string name="show_stats_total_wins">"Wins: "</string>
    <string name="show_stats_total_draws">"Draws: "</string>
    <string name="show_stats_total_losses">"Losses: "</string>
    <string name="show_stats_counting">"counting…"</string>
    <string name="show_stats_counting_short">"…"</string>
    <string name="show_stats_rating_average">"Your average rating: "</string>
    <string name="show_stats_best_win">"Best win: "</string>
    <string name="show_stats_worst_loss">"Worst loss: "</string>
    <string name="settings_title">"Settings"</string>
    <string name="settings_backup_button">"BACKUP NOW"</string>
    <string name="settings_backup_switch">"Automatic weekly backup is "</string>
    <string name="settings_last_backup">"Last backup was at: "</string>
    <string name="settings_last_backup_empty">"backup not found…"</string>
    <string name="settings_restore_button">"RESTORE DATABASE"</string>
    <string name="error_backup_no_sd">"Backup failed\nSD memory not available"</string>
    <string name="error_no_database">"Backup failed\nDatabase not available"</string>
    <string name="error_open_backup_file">"Backup failed\nCouldn't open backup file"</string>
    <string name="error_write_backup">"Backup failed\nCouldn't write to backup file"</string>
</resources>