<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AddGameActivity"
    tools:showIn="@layout/activity_add_game">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:text="@string/add_game_elo" />

        <EditText
            android:id="@+id/add_game_edit_elo"
            android:labelFor="@+id/add_game_edit_elo"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number">
            <requestFocus/>
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:text="@string/add_game_result"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_game_result_group"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/add_game_result_2"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_width="0dp"
                android:text="@string/add_game_radio_won"/>
            <RadioButton android:id="@+id/add_game_result_1"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_width="0dp"
                android:text="@string/add_game_radio_drawn"/>
            <RadioButton android:id="@+id/add_game_result_0"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:layout_width="0dp"
                android:text="@string/add_game_radio_lost"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:text="@string/add_game_note"/>

        <EditText
            android:id="@+id/add_game_edit_note"
            android:labelFor="@+id/add_game_edit_note"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text">
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/add_game_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/add_game_submit_button"
        android:onClick="submitGame"/>

</LinearLayout>
