<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#161616"
        android:textColor="@android:color/primary_text_dark"
        android:padding="6pt"
        android:text="@string/settings_title"
        android:textSize="@dimen/activity_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5pt">

        <Switch
            android:id="@+id/settings_backup_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_dark"
            android:text="@string/settings_backup_switch" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5pt">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@android:color/primary_text_dark"
            android:text="@string/settings_last_backup" />

        <TextView
            android:id="@+id/setting_backup_date"
            android:layout_width="wrap_content"
            android:textColor="@android:color/primary_text_dark"
            android:layout_height="match_parent" />

    </LinearLayout>

    <Button
        android:id="@+id/backup_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5pt"
        android:textColor="@android:color/primary_text_dark"
        android:onClick="backupNow"
        android:text="@string/settings_backup_button" />

</LinearLayout>