<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ShowStatsActivity"
    tools:showIn="@layout/activity_show_stats">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_stats_total_games" />

        <TextView
            android:id="@+id/show_stats_total_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_stats_counting" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_total_wins" />

            <TextView
                android:id="@+id/show_stats_total_wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_counting_short" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_total_draws" />

            <TextView
                android:id="@+id/show_stats_total_draws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_counting_short" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_total_losses" />

            <TextView
                android:id="@+id/show_stats_total_losses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_counting_short" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_stats_rating_average" />

        <TextView
            android:id="@+id/show_stats_rating_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_stats_counting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_best_win" />

            <TextView
                android:id="@+id/show_stats_best_win"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_counting_short" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_worst_loss" />

            <TextView
                android:id="@+id/show_stats_worst_loss"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_stats_counting_short" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.example.jp.footballstats.RatingChartView
            android:id="@+id/rating_chart_widget"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:vlastnost="false">

        </com.example.jp.footballstats.RatingChartView>

    </LinearLayout>

</LinearLayout>
